--- a/about.css
+++ b/about.css
@@ -1,3 +1,4 @@
+/* About Page CSS */
 @import url('https://fonts.googleapis.com/css2?family=Merienda+One&family=Nunito:wght@200;300;400;500;600&display=swap');
 .body{
     background-color: burlywood;
