--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ h1 {color: black;
 p{color:black}
 
 /* Font Family */
-{margin: 0 ;
+*{margin: 2 ;
 font-family:Arial, Helvetica, sans-serif;
 }
 
