--- a/beta.css
+++ b/beta.css
@@ -8,3 +8,8 @@
   .fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
     opacity: 0;
   }
+  #dynamic{
+    position: absolute;
+    top: 150px;
+  }
+  /* this is the final file */
