--- a/minigame.css
+++ b/minigame.css
@@ -23,3 +23,4 @@ p{color:black;
         -ms-transform: translate(-50%, -50%);
         transform: translate(-50%, -50%);
       }
+      /* this is the final file */
